--- a/style.css
+++ b/style.css
@@ -5,260 +5,339 @@
 /*
   1. Use a more-intuitive box-sizing model.
 */
-*, *::before, *::after {
-    box-sizing: border-box;
-  }
-  /*
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/*
     2. Remove default margin
   */
-  * {
-    margin: 0;
-  }
-  /*
+* {
+  margin: 0;
+}
+
+/*
     3. Allow percentage-based heights in the application
   */
 
-  /*
+/*
     Typographic tweaks!
     4. Add accessible line-height
     5. Improve text rendering
   */
-  body {
-    line-height: 1.5;
-    -webkit-font-smoothing: antialiased;
-  }
-  /*
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+
+/*
     6. Improve media defaults
   */
-  img, picture, video, canvas, svg {
-    display: block;
-    max-width: 100%;
-  }
-  /*
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+
+/*
     7. Remove built-in form typography styles
   */
-  input, button, textarea, select {
-    font: inherit;
-  }
-  /*
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/*
     8. Avoid text overflows
-  */S
-  p, h1, h2, h3, h4, h5, h6 {
-    overflow-wrap: break-word;
-  }
+  */
+S p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
 
 
 /* || VARIABLES || */
-:root{
-    /* || COLORS || */
+:root {
+  /* || COLORS || */
 
-    /* COLORS PRIMARY */
-    --clr-primary-400: hsl(223, 87%, 63%);
-    --clr-primary-100: hsl(0, 0%, 97%);
-    --clr-primary-500: hsl(154, 59%, 51%);
-    /* COLORS SECONDARY */
-    --clr-secondary-200: hsl(223, 100%, 88%);
-    --clr-secondary-400: hsl(354, 100%, 66%);
+  /* COLORS PRIMARY */
+  --clr-primary-400: hsl(223, 87%, 63%);
+  --clr-primary-100: hsl(0, 0%, 97%);
+  --clr-primary-500: hsl(154, 59%, 51%);
+  /* COLORS SECONDARY */
+  --clr-secondary-200: hsl(223, 100%, 88%);
+  --clr-secondary-400: hsl(354, 100%, 66%);
 
-    /* COLORS NEUTRAL */
-    --clr-neutral-500: hsl(0, 0%, 59%);
-    --clr-neutral-800: hsl(209, 33%, 12%);
+  /* COLORS NEUTRAL */
+  --clr-neutral-500: hsl(0, 0%, 59%);
+  --clr-neutral-800: hsl(209, 33%, 12%);
 
 
-    /* || FONT || */
+  /* || FONT || */
 
-    /* FONT SIZE */
-    --fs-base: 20px;
+  /* FONT SIZE */
+  --fs-base: 20px;
 
-    /* FONT FAMILY */
-    --ff-primary: 'Libre Franklin', sans-serif;
+  /* FONT FAMILY */
+  --ff-primary: 'Libre Franklin', sans-serif;
 
-    /* FONT WEIGHT */
-    --fw-light: 300;
-    --fw-regular: 400;
-    --fw-bold: 700;
+  /* FONT WEIGHT */
+  --fw-light: 300;
+  --fw-regular: 400;
+  --fw-bold: 700;
 
 }
+
 /* || GLOBAL || */
-html,body{
-    font-size: var(--fs-base);
-    font-family: var(--ff-primary);
-    font-weight: var(--fw-regular);
-    color: var(--clr-neutral-800);
-    background-color: var(--clr-primary-100);
+html,
+body {
+  font-size: var(--fs-base);
+  font-family: var(--ff-primary);
+  font-weight: var(--fw-regular);
+  color: var(--clr-neutral-800);
+  background-color: var(--clr-primary-100);
 }
 
 /* || LAYOUT || */
-body{
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-    min-height: 100vh;
-    place-items: center;
-    margin: 1.5rem;
+body {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  min-height: 100vh;
+  place-items: center;
+  margin: 1.5rem;
 }
 
 /* || HEADER || */
-header{
-display: flex;
-justify-content: center;
-align-items: end;
-height: 4rem;
-margin-bottom: 2rem;
+header {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  height: 4rem;
+  margin-bottom: 2rem;
 }
 
-header .header__logo{
-    max-width: 80%;
+header .header__logo {
+  max-width: 80%;
 }
+
 /* || MAIN || */
-main{
-   display: grid;
-   max-width: 650px;
+main {
+  display: grid;
+  max-width: 650px;
 }
+
 /* MAIN HEADER */
-main .main__header{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    line-height: 1rem;
+main .main__header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  line-height: 1rem;
 }
 
-.main__header-title{
-    font-size: 1.25rem;
-    font-weight: var(--fw-regular);
-    color: var(--clr-neutral-800);
-    margin-bottom: 1rem;
+.main__header-title {
+  font-size: 1.25rem;
+  font-weight: var(--fw-regular);
+  color: var(--clr-neutral-800);
+  margin-bottom: 1rem;
 }
 
-.main__header-title span{
-font-weight: var(--fw-bold);
+.main__header-title span {
+  font-weight: var(--fw-bold);
 }
 
-.main__header-text{
-    font-size: 0.7rem;
-    font-weight: var(--fw-light);
-    color: var(--clr-neutral-500);
-    margin-bottom: 2rem;
+.main__header-text {
+  font-size: 0.7rem;
+  font-weight: var(--fw-light);
+  color: var(--clr-neutral-500);
+  margin-bottom: 2rem;
 }
+
 /* MAIN FORM */
-.main__form-wrapper{
-    display: grid;
-    margin: .5rem;
-    
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.container{
+.main__form-wrapper {
+  display: grid;
+  margin: .5rem;
+  width: 100%;
+  max-width: 450px;
+}
+
+.email-form {
+  display: grid;
+  position: relative;
 
 }
 
-.email-form{
-display: grid;
-position: relative;
-
+.email-form input {
+  padding: .8rem;
+  border-radius: 5rem;
+  border: 1px solid var(--clr-neutral-500);
+  font-size: 0.8rem;
+  font-weight: var(--fw-light);
+  color: var(--clr-neutral-500);
+  outline: none;
+  width: 100%;
 }
 
-.email-form input{
-    padding: .8rem;
-    border-radius: 5rem;
-    border: 1px solid var(--clr-neutral-500);
-    font-size: 0.8rem;
-    font-weight: var(--fw-light);
-    color: var(--clr-neutral-500);
-    outline: none;
-    width: 100%;
+.email-form i {
+  position: absolute;
+  top: 1.5rem;
+  right: 1rem;
+  transform: translateY(-50%);
+  visibility: hidden;
 }
 
-.email-form i{
-    position: absolute;
-    top: 1.5rem;
-    right: 1rem;
-    transform: translateY(-50%);
-    visibility: hidden;
+.email-form.succes i.fa-check-circle {
+  visibility: visible;
+  color: var(--clr-primary-500);
 }
 
-.email-form.succes i.fa-check-circle{
-    visibility: visible;
-    color: var(--clr-primary-500);
+.email-form.error i.fa-check-circle {
+  visibility: visible;
+  color: var(--clr-secondary-400);
 }
 
-.email-form.error i.fa-check-circle{
-    visibility: visible;   
-    color: var(--clr-secondary-400);
+.email-form small {
+  text-align: center;
+  color: var(--clr-secondary-400);
+  font-size: 0.7rem;
+  font-weight: var(--fw-light);
+  display: none;
 }
 
-.email-form small{
-    text-align: center;
-    color: var(--clr-secondary-400);
-    font-size: 0.7rem;
-    font-weight: var(--fw-light);
-    display: none;
+.email-form.error small {
+  display: block;
 }
 
-.email-form.error small{
-    display: block;
+.btn {
+  padding: .8rem;
+  border-radius: 5rem;
+  border: none;
+  margin-top: 1rem;
+  background-color: var(--clr-primary-400);
+  color: var(--clr-primary-100);
+  font-size: 0.8rem;
+  font-weight: var(--fw-bold);
+  cursor: pointer;
+  outline: none;
+  max-width: 100%;
+  transition: all .3s ease-in-out;
+  max-height: 58px;
 }
 
-.btn{
-    padding: .8rem;
-    border-radius: 5rem;
-    border: none;
-    margin-top: 1rem;
-    background-color: var(--clr-primary-400);
-    color: var(--clr-primary-100);
-    font-size: 0.8rem;
-    font-weight: var(--fw-bold);
-    cursor: pointer;
-    outline: none;
-    max-width: 100%;
+.btn:hover {
+  background-color: var(--clr-primary-500);
+  color: var(--clr-primary-100);
+  transform: scale(1.05);
 }
 
 
 /* MAIN CONTENT */
 
-picture{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 2rem 0;
-    
+picture {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem 0;
+
 }
+
 /* MAIN FOOTER */
-footer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    gap: .5rem;
-    margin-top: 2rem;
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: .5rem;
+  margin-top: 2rem;
 }
 
-footer .main__socials{
-    display: flex;
-    gap: 1rem;
-    
+footer .main__socials {
+  display: flex;
+  gap: 1rem;
+
 }
 
-footer .main__socials i{
-    height: 42px;
-    width: 42px;
-    color: var(--clr-primary-400);
-    padding: .5rem;
-    border : 1px solid var(--clr-primary-400);
-    border-radius: 50%;
-    transition: color .3s ease-in-out;
+footer .main__socials i {
+  height: 42px;
+  width: 42px;
+  color: var(--clr-primary-400);
+  padding: .5rem;
+  border: 1px solid var(--clr-primary-400);
+  border-radius: 50%;
+  transition: color .3s ease-in-out;
 }
 
-footer .main__socials i:hover{
-    color: var(--clr-primary-500);
-    border : 1px solid var(--clr-primary-500);
+
+footer .main__socials i:hover {
+  color: var(--clr-primary-500);
+  border: 1px solid var(--clr-primary-500);
+  transform: scale(1.1);
 }
 
-footer .footer__text{
-    font-size: 0.7rem;
-    font-weight: var(--fw-light);
+footer .footer__text {
+  font-size: 0.7rem;
+  font-weight: var(--fw-light);
+  color: var(--clr-neutral-500);
+  margin-bottom: 1rem;
+}
+
+/* || MEDIA QUERIES || */
+
+@media screen and (min-width: 768px) {
+  html, body{
+    margin: 0;
+  }
+  .main__header-title {
+    font-size: clamp(1.25rem, 3vw, 2rem);
+    font-weight: var(--fw-regular);
     color: var(--clr-neutral-500);
     margin-bottom: 1rem;
+  }
+
+  .main__header-title span {
+    color: var(--clr-neutral-800);
+  }
+
+  .main__header-text {
+    font-size: clamp(0.7rem, 1.35vw, 0.9rem);
+    font-weight: var(--fw-light);
+    color: var(--clr-neutral-500);
+    margin-bottom: 2rem;
+  }
+
+  .main__form-wrapper {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    margin: .5rem;
+    width: 100%;
+    max-width: 100%;
+    gap: 1rem;
+  }
+.container{
+  place-items: center;
 }
-/* || FOOTER || */
 
+.btn{
+  margin-top: 0;
+}
 
+}
